--- a/src/package.json
+++ b/src/package.json
@@ -6,11 +6,17 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
+    "antd": "4.16.13",
     "emailjs-com": "2.6.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-elastic-carousel": "0.11.5",
+    "react-material-ui-carousel": "2.3.1",
+    "react-multi-carousel": "2.6.5",
     "react-scripts": "4.0.2",
-    "smooth-scroll": "16.1.3"
+    "react-slick": "0.28.1",
+    "smooth-scroll": "16.1.3",
+    "ua-parser-js": "0.7.28"
   },
   "scripts": {
     "start": "react-scripts start",
